# anamnesa

./: .env.example  .gitignore  CLAUDE.md  EVAL_STATUS.md  OVERNIGHT.md  PITCH.md  README.md  pyproject.toml
agents/: __init__.py  base.py  drafter.py  normalizer.py  verifier.py
agents/prompts/: crawler.md  drafter.md  ingester.md  normalizer.md  verifier.md
catalog/: manifest.json
catalog/processed/fornas/: fornas-2023.json
catalog/processed/pnpk/: pnpk-akupunktur-medik-2024.json  pnpk-anestesiologi-terapi-intensif-2015.json  pnpk-anestesiologi-terapi-intensif-2022.json  pnpk-angina-pectoris-stabil-2023.json  pnpk-asfiksia-2019.json  pnpk-batu-saluran-kemih-2022.json  pnpk-bibir-sumbing-2019.json  (+71 more)
core/: __init__.py  budget.py  cache.py  chunk_store.py  embeddings.py  feedback.py  manifest.py  orchestrator.py  refusals.py  retrieval.py  state.py  text_cleanup.py  trace.py
eval/: __init__.py  queries.py  run_eval.py
mcp/: __init__.py  anamnesa_mcp.py  client.py
scripts/: bench_agentic.py  build_index.py  demo_orchestrator.py  deploy_cache.py  deploy_fornas.py  deploy_fullsync.py  deploy_index_swap.py  deploy_obat.py  deploy_speed_config.py  deploy_whyrefused.py  ingest_fornas.py  probe_cache_live.py  probe_drafter_live.py  probe_multiturn.py  probe_stream_nothink.py  probe_stream_text.py  reindex.py  run_query.py  smoke_prod.py
server/: __init__.py  main.py
tests/: fakes.py  test_budget.py  test_cache.py  test_chunk_store.py  test_drafter.py  test_embeddings.py  test_eval.py  test_feedback.py  test_manifest_append.py  test_normalizer.py  test_normalizer_heuristic.py  test_orchestrator.py  test_pdf_vision.py  test_retrieval.py  test_retrieval_preview.py  test_verifier.py
tools/: __init__.py  manifest_append.py  pdf_vision.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AnswerPanel.tsx  AppFooter.tsx  FastSearch.tsx  FeedbackBar.tsx  HistoryPanel.tsx  Masthead.tsx  PdfViewer.tsx  QueryInput.tsx  TraceSidebar.tsx
web/lib/: exportMarkdown.ts  i18n.ts  refusalMessages.ts  types.ts  useFavorites.ts  useHistory.ts  useQueryStream.ts
(+29 files in other folders)
